force-app/main/default/objects/Claim__c/fields/funder__c.field-meta.xml
<CustomField>
    <fullName>funder__c</fullName>
    <label>funder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>