force-app/main/default/objects/Claim__c/fields/healthFundAccountcardRank__c.field-meta.xml
<CustomField>
    <fullName>healthFundAccountcardRank__c</fullName>
    <label>healthFundAccount.cardRank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>