force-app/main/default/objects/Claim__c/fields/healthFundAccounthealthFundCode__c.field-meta.xml
<CustomField>
    <fullName>healthFundAccounthealthFundCode__c</fullName>
    <label>healthFundAccount.healthFundCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>