force-app/main/default/objects/Claim__c/fields/healthFundAccountmembershipNumber__c.field-meta.xml
<CustomField>
    <fullName>healthFundAccountmembershipNumber__c</fullName>
    <label>healthFundAccount.membershipNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>