force-app/main/default/objects/Claim__c/fields/invoiceReference__c.field-meta.xml
<CustomField>
    <fullName>invoiceReference__c</fullName>
    <label>invoiceReference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>