force-app/main/default/objects/Claim__c/fields/medicareclaimanthealthFundAccountcard__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimanthealthFundAccountcard__c</fullName>
    <label>medicare.claimant.healthFundAccount.card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>