force-app/main/default/objects/Claim__c/fields/medicareclaimantpostalAddressaddress2__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimantpostalAddressaddress2__c</fullName>
    <label>medicare.claimant.postalAddress.address2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>