force-app/main/default/objects/Claim__c/fields/medicareclaimantpostalAddressaddress__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimantpostalAddressaddress__c</fullName>
    <label>medicare.claimant.postalAddress.address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>