force-app/main/default/objects/Claim__c/fields/medicareclaimantrefId__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimantrefId__c</fullName>
    <label>medicare.claimant.refId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>