force-app/main/default/objects/Claim__c/fields/medicareclaimItemsitemCode__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimItemsitemCode__c</fullName>
    <label>medicare.claimItems.itemCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>