force-app/main/default/objects/Claim__c/fields/medicareclaimItemsprice__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimItemsprice__c</fullName>
    <label>medicare.claimItems.price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>