force-app/main/default/objects/Claim__c/fields/medicareclaimItemsreference__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimItemsreference__c</fullName>
    <label>medicare.claimItems.reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>