force-app/main/default/objects/Claim__c/fields/medicareclaimItemsserviceDate__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimItemsserviceDate__c</fullName>
    <label>medicare.claimItems.serviceDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>