force-app/main/default/objects/Claim__c/fields/medicareclaimItemsserviceText__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimItemsserviceText__c</fullName>
    <label>medicare.claimItems.serviceText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>