force-app/main/default/objects/Claim__c/fields/medicareclaimType__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimType__c</fullName>
    <label>medicare.claimType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>