force-app/main/default/objects/Claim__c/fields/medicarereferralissueDateString__c.field-meta.xml
<CustomField>
    <fullName>medicarereferralissueDateString__c</fullName>
    <label>medicare.referral.issueDateString</label>
    <length>255</length>
    <type>Text</type>
</CustomField>