force-app/main/default/objects/Claim__c/fields/medicarereferralperiodType__c.field-meta.xml
<CustomField>
    <fullName>medicarereferralperiodType__c</fullName>
    <label>medicare.referral.periodType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>