force-app/main/default/objects/Claim__c/fields/medicarereferralproviderFullName__c.field-meta.xml
<CustomField>
    <fullName>medicarereferralproviderFullName__c</fullName>
    <label>medicare.referral.providerFullName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>