force-app/main/default/objects/Claim__c/fields/medicarereferralproviderNumber__c.field-meta.xml
<CustomField>
    <fullName>medicarereferralproviderNumber__c</fullName>
    <label>medicare.referral.providerNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>