force-app/main/default/objects/Claim__c/fields/medicarereferralreferrerType__c.field-meta.xml
<CustomField>
    <fullName>medicarereferralreferrerType__c</fullName>
    <label>medicare.referral.referrerType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>