force-app/main/default/objects/Claim__c/fields/patient_id__c.field-meta.xml
<CustomField>
    <fullName>patient_id__c</fullName>
    <label>patient._id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>