force-app/main/default/objects/Claim__c/fields/patientdobString__c.field-meta.xml
<CustomField>
    <fullName>patientdobString__c</fullName>
    <label>patient.dobString</label>
    <length>255</length>
    <type>Text</type>
</CustomField>