force-app/main/default/objects/Claim__c/fields/patientlastName__c.field-meta.xml
<CustomField>
    <fullName>patientlastName__c</fullName>
    <label>patient.lastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>