force-app/main/default/objects/Claim__c/fields/patientrefId__c.field-meta.xml
<CustomField>
    <fullName>patientrefId__c</fullName>
    <label>patient.refId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>