force-app/main/default/objects/Claim__c/fields/patientrstName__c.field-meta.xml
<CustomField>
    <fullName>patientrstName__c</fullName>
    <label>patient.ﬁrstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>