force-app/main/default/objects/Claim__c/fields/patientsex__c.field-meta.xml
<CustomField>
    <fullName>patientsex__c</fullName>
    <label>patient.sex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>