force-app/main/default/objects/Claim__c/fields/providerNumber__c.field-meta.xml
<CustomField>
    <fullName>providerNumber__c</fullName>
    <label>providerNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>