force-app/main/default/objects/Claim__c/fields/sequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>sequenceNumber__c</fullName>
    <label>sequenceNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>