force-app/main/default/objects/Claim__c/listViews/allSelection_Claim.listView-meta.xml
<ListView>
    <fullName>allSelection_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>